<resources>
    <string name="app_name">Jambo</string>

    <string name="no_internet">No active Internet Connection</string>
    <string name="no_items">No Items for location</string>
    <string name="pick_address">Tap pick location to get your address</string>
    <string name="pick_location">PICK LOCATION</string>
    <string name="current_location_pick">Welcome! Where are you at?</string>
    <string name="proceed">PROCEED</string>
    <string name="connect">Connect Internet</string>
    <string name="copyContent">Copy</string>
    <string name="permissions">Need GPS permission for getting your location</string>

    <string-array name="locations">
        <item>Kampala</item>
        <item>Nairobi</item>
        <item>Lagos</item>
        <item>Kigali</item>
        <item>New York</item>
        <item>Current Location</item>
    </string-array>


    <string name="lists">List</string>
    <string name="quilt">Quilt</string>
    <string name="textstyle">Text style</string>
    <string name="textsize">Font size</string>
    <string name="no_bookmarks">No article has been bookmarked</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="bookmark">Bookmark</string>
    <string name="remove">Remove Bookmark</string>
    <string name="select_all">Select All</string>
    <string name="selected_count">%1$s selected</string>

    <string name="mores">More</string>
    <string name="share">Share</string>

</resources>
