...

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/title"
                android:text="@{article.title}"
                android:layout_marginTop="8dp"
                android:gravity="center_vertical|center_horizontal"
                android:typeface="serif"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/description"
                android:textSize="20sp"
                android:text="@{article.description}"
                android:layout_marginTop="8dp"
                android:textStyle="bold"
                android:typeface="sans" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/content"
                android:text="@{article.content}"
                android:layout_marginTop="8dp"
                android:typeface="sans" />


            <TextView
...

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/htmlUrl"
                android:onClick="webViewDetails"
                android:text="@{article.url}"
                app:webLink="@{article.url}"
                android:gravity="center_vertical|center_horizontal"
                android:typeface="sans" />

...
